Sync mathjax updates to theme

--- a/themes/rhino3d.com-theme/layouts/partials/mathjax_support.html
+++ b/themes/rhino3d.com-theme/layouts/partials/mathjax_support.html
@@ -1,7 +1,6 @@
 <!-- Mathjax support starts -->
-<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script type="text/javascript" async
-src="https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js">
+src="https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js" integrity="sha384-Wuix6BuhrWbjDBs24bXrjf4ZQ5aFeFWBuKkFekO2t8xFU0iNaLQfp2K6/1Nxveei" crossorigin="anonymous">
   MathJax.Hub.Config({
   tex2jax: {
     inlineMath: [['$','$'], ['\\(','\\)']],
