--- a/themes/rhino3d.com-theme/layouts/shortcodes/vimeo.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/vimeo.html
@@ -1,9 +1,10 @@
-<div style="padding:56.25% 0 0 0;position:relative;">
 {{ if .IsNamedParams }}    
     {{ $id := .Get "id"}}
-    <iframe title="video" src="https://player.vimeo.com/video/{{ $id }}?autoplay={{ if .Get "autoplay" }}{{ .Get "autoplay"}}{{ else }}0{{ end }}&loop={{ if .Get "loop" }}{{ .Get "loop"}}{{ else }}0{{ end }}&autopause={{ if .Get "autopause" }}{{ .Get "autopause"}}{{ else }}1{{ end }}&muted=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <div style="padding:{{ if .Get "padding" }}{{ .Get "padding"}}{{ else }}56.25%{{ end }} 0 0 0;position:relative;">
+        <iframe title="video" src="https://player.vimeo.com/video/{{ $id }}?{{ if .Get "privacyhash" }}h={{ .Get "privacyhash" }}{{end}}&autoplay={{ if .Get "autoplay" }}{{ .Get "autoplay"}}{{ else }}0{{ end }}&loop={{ if .Get "loop" }}{{ .Get "loop"}}{{ else }}0{{ end }}&autopause={{ if .Get "autopause" }}{{ .Get "autopause"}}{{ else }}1{{ end }}&texttrack={{ if .Get "texttrack" }}{{ .Get "texttrack"}}{{ else }}en{{ end }}&muted=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 {{ else }}
-    <iframe title="video" src="https://player.vimeo.com/video/{{ .Get 0 }}?autoplay=0&loop=0&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <div style="padding:56.25% 0 0 0;position:relative;">
+        <iframe title="video" src="https://player.vimeo.com/video/{{ .Get 0 }}?autoplay=0&loop=0&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 {{ end }}
-<script src="https://player.vimeo.com/api/player.js"></script>
+<script src="https://player.vimeo.com/api/player.js" integrity="sha384-fYgai7z8Tr2FqnmPbT+J2mR66tN6O0vGzHRvtszof8FM4X9PhmqYJuhwVjCK5JDl" crossorigin="anonymous"></script>
 </div>
