--- a/themes/rhino3d.com-theme/layouts/partials/footer.html
+++ b/themes/rhino3d.com-theme/layouts/partials/footer.html
@@ -26,18 +26,18 @@
         </div>
     </div>    
     <div class="footer-middle">       
-        <a href="{{.Site.Params.rhinoURL }}/mcneel/about">{{ replace .Site.Params.Copyright "{year}" now.Year}}</a>
+        <a href="{{.Site.Params.rhinoURL }}/mcneel/about" alt="About McNeel">{{ replace .Site.Params.Copyright "{year}" now.Year}}</a>
     </div>
     <div class="footer-middle">
-        <a href="{{ .Site.Params.facebookURL }}" class="fab fa-facebook" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
-        <a href="{{ .Site.Params.twitterURL }}" class="fab fa-twitter" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
-        <a href="{{ .Site.Params.linkedinURL }}" class="fab fa-linkedin" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
-        <a href="{{ .Site.Params.youtubeURL }}" class="fab fa-youtube" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
-        <a href="{{ .Site.Params.vimeoURL }}" class="fab fa-vimeo" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
-        <a href="{{ .Site.Params.bloggerURL }}" class="fa"
+        <a href="{{ .Site.Params.facebookURL }}" aria-label="Facebook" class="fab fa-facebook" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
+        <a href="{{ .Site.Params.twitterURL }}" aria-label="Twitter" class="fab fa-twitter" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
+        <a href="{{ .Site.Params.linkedinURL }}" aria-label="LinkedIn" class="fab fa-linkedin" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
+        <a href="{{ .Site.Params.youtubeURL }}" aria-label="YouTube" class="fab fa-youtube" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
+        <a href="{{ .Site.Params.vimeoURL }}" aria-label="Vimeo" class="fab fa-vimeo" style="padding: 10px; font-size: 30px; text-decoration: none;" target="_blank" rel="noopener noreferrer"></a>
+        <a href="{{ .Site.Params.bloggerURL }}" aria-label="Blogger" class="fa"
             style="padding: 10px; font-size: 30px; text-decoration: none;  display: inline-flex" target="_blank"
             rel="noopener noreferrer"><img alt="Blogger icon" src="/images/blogger.svg"></a>
-        <a href="{{ .Site.Params.food4rhinoURL }}" class="fa"
+        <a href="{{ .Site.Params.food4rhinoURL }}" aria-label="Food4Rhino" class="fa"
             style="padding: 10px; font-size: 30px; text-decoration: none;  display: inline-flex" target="_blank"
             rel="noopener noreferrer"><img alt="Food4Rhino" src="/images/f4r_icon_01.svg" height="32" width="32"></a>
     </div>
