--- a/themes/rhino3d.com-theme/layouts/partials/snapengage.html
+++ b/themes/rhino3d.com-theme/layouts/partials/snapengage.html
@@ -1,19 +1,18 @@
-{{- if eq "EMEA" (getenv "MCNEEL_REGION") -}}
-{{ $.Scratch.Set "widgetId" "0f7a63e0-1a2f-4086-a1b1-f3c215c8f4a4" }}
-{{- else -}}
-{{ $.Scratch.Set "widgetId" "b8a9358a-a27f-486f-8b70-622193792c6f" }}
-{{- end -}}
-
 <!-- begin SnapEngage code -->
 <script type="text/javascript">
 	(function() {
 	  var se = document.createElement('script'); se.type = 'text/javascript'; se.async = true;
-	  se.src = 'https://storage.googleapis.com/code.snapengage.com/js/{{- $.Scratch.Get "widgetId" -}}.js';
+	  /* region selection for snapengage now happens at the proxy level */
+      se.src = 'https://www.rhino3d.com/snapengage/script/'	  
+	  
 	  var done = false;
 	  se.onload = se.onreadystatechange = function() {
 		if (!done&&(!this.readyState||this.readyState==='loaded'||this.readyState==='complete')) {
 		  done = true;
 		  /* Place your SnapEngage JS API code below */
+		  if ('{{.Params.page_options.showChatOnLoad}}'){
+		  	SnapEngage.openProactiveChat(true, true); 
+		  }
 		  /* SnapEngage.allowChatSound(true); Example JS API: Enable sounds for Visitors. */
 		}
 	  };
