--- a/themes/rhino3d.com-theme/assets/scss/_override.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_override.scss
@@ -174,6 +174,53 @@ td.hljs-ln-line.hljs-ln-code {
   width: max-content;
 }
 
+
+/* 
+####################################################################
+# Rhino 8 What's New overrides
+####################################################################
+*/
+
+.v8-new-description {
+  padding-top: 4px;
+  padding-bottom: 8px;
+}
+
+#captions {
+  background-color: red
+  ;
+}
+
+
+.video-player {
+  position: relative;
+  width: 100%;
+  text-align:center;
+}
+.video-player video {
+  width: 100%;
+  display: block;
+}
+
+.video-player .caption-locator {
+  position:absolute;
+  bottom: 15%;
+  left: 0;
+  width: 100%;
+}
+.video-player .rma-caption {
+  display:inline-block;
+  position: relative;
+  color:white;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  padding: 3px 6px;
+  height:1.5em;
+  text-align:center;
+  width: auto;
+}
+
+
 /* 
 ####################################################################
 # Google Search Results Overrides
