--- a/themes/rhino3d.com-theme/assets/scss/_variables.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_variables.scss
@@ -36,6 +36,7 @@ $global-link-visited-color: #A24242;
 // Color of the background
 $global-background-color: #fff !default;
 $global-background-color-dark: #292a2d !default;
+$global-background-rhino-grid-color: #F0F0F0 !default;
 
 // Various colors
 $global-light-color: white !default;
