--- a/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
+++ b/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
@@ -47,14 +47,82 @@
       {{- end -}}
       <span class="logged_in">
         <a href="{{ .Site.Params.rhinoURL }}/my-account/" title="{{ i18n "logged-in-title" }}">{{ i18n "my-account" }}
-            <img alt="user avatar" style="width: 18px; height: 18px; float: right; border-radius: 50%; margin-top: 1px; margin-left: 4px;" src="https://www.rhino3d.com/user/avatar/">
         </a>
       </span>
+      <span class="logged_in" style="height: 24px">
+        <label class="nav-dropdown">
+
+          <a class="dd-button" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/59/User-avatar.svg')">
+            <div style="width: 100%; height: 100%;">
+              <img class = "avatar" src="https://www.rhino3d.com/user/avatar/" alt="User Avatar">
+            </div>
+          </a>
+        
+          <input type="checkbox" class="dd-input" id="nav-avatar">
+        
+          <ul class="dd-menu">
+            {{/*  <li onclick="toAccount()">
+              <a>{{ i18n "my-account" }}</a>
+            </li>
+            <li class="divider"></li>  */}}
+            <li onclick="logout()">
+              <a>{{ i18n "sign-out" }}</a>
+            </li>
+          </ul>
+          
+        </label>
+      </span>
+
       <span class="logged_out hidden">
         <a href="{{ .Site.Params.rhinoURL }}/my-account/" title="{{ i18n "sign-in-title" }}">{{ i18n "sign-in" }}</a>
       </span>
-    </div>
 
     </div>
-  </div>
+
 </div>
+
+<script type="text/javascript" src="//code.jquery.com/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="{{ (resources.Get "/script/mcneel_accounts_login_status.js" | resources.Fingerprint).Permalink }}"></script>
+<script>
+  const logout = () => {
+        //First we see if the user is logged in.
+        const clientId = window.location.host == "www.rhino3d.com" ? "rhino3dWebsite" : "rhino3dWebsiteDEBUG";
+        var infoCookie = mca.utilities.getCookieForName("MCA_CLIENT_USER_SESSION_INFO-" + clientId);
+  
+        if (infoCookie)
+          {
+            //console.log("clientId:", clientId);
+            //console.log("infocookie:", infoCookie)
+            infoCookie = JSON.parse(infoCookie);
+            const dropdownLogoutUrl = mca.utilities.buildURL(`/${encodeURIComponent(clientId)}/mcneel-accounts/logout`, {
+              nonce: infoCookie.nonce,
+              host_url: window.location.origin,
+              dest_url: window.location.href
+            });
+            console.log("dropdownLogoutUrl:", dropdownLogoutUrl)
+            window.location.href = dropdownLogoutUrl;
+          }
+          else{
+          console.log("not logged in")
+          }
+  }
+
+  const toAccount = () => {
+    window.location.href = "/my-account";
+  }
+
+  //Click away
+  $('#nav-avatar').click(function(event){
+    event.stopPropagation();
+  });
+
+  $(window).click(function(event) {
+    if(event.target.id == "nav-avatar"){
+      event.stopPropagation();
+    }
+    else{
+      //Hide the menus if visible
+      $('#nav-avatar').prop('checked', false); 
+    }
+  });
+</script>
