--- a/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
+++ b/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
@@ -49,34 +49,35 @@
         <a href="{{ .Site.Params.rhinoURL }}/my-account/" title="{{ i18n "logged-in-title" }}">{{ i18n "my-account" }}
         </a>
       </span>
-      <span class="logged_in" style="height: 24px">
-        <label class="nav-dropdown">
+      {{- if .Site.Params.supportsLogin -}}
+        <span class="logged_in" style="height: 24px">
+          <label class="nav-dropdown">
 
-          <a class="dd-button" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/59/User-avatar.svg')">
-            <div style="width: 100%; height: 100%;">
-              <img class = "avatar" src="https://www.rhino3d.com/user/avatar/" alt="User Avatar">
-            </div>
-          </a>
-        
-          <input type="checkbox" class="dd-input" id="nav-avatar">
-        
-          <ul class="dd-menu">
-            {{/*  <li onclick="toAccount()">
-              <a>{{ i18n "my-account" }}</a>
-            </li>
-            <li class="divider"></li>  */}}
-            <li onclick="logout()">
-              <a>{{ i18n "sign-out" }}</a>
-            </li>
-          </ul>
+            <a class="dd-button" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/59/User-avatar.svg')">
+              <div style="width: 100%; height: 100%;">
+                <img class = "avatar" src="https://www.rhino3d.com/user/avatar/" alt="User Avatar">
+              </div>
+            </a>
           
-        </label>
-      </span>
+            <input type="checkbox" class="dd-input" id="nav-avatar">
+          
+            <ul class="dd-menu">
+              {{/*  <li onclick="toAccount()">
+                <a>{{ i18n "my-account" }}</a>
+              </li>
+              <li class="divider"></li>  */}}
+              <li onclick="logout()">
+                <a>{{ i18n "sign-out" }}</a>
+              </li>
+            </ul>
+            
+          </label>
+        </span>
 
-      <span class="logged_out hidden">
-        <a href="{{ .Site.Params.rhinoURL }}/my-account/" title="{{ i18n "sign-in-title" }}">{{ i18n "sign-in" }}</a>
-      </span>
-
+        <span class="logged_out hidden">
+          <a href="{{ .Site.Params.rhinoURL }}/my-account/" title="{{ i18n "sign-in-title" }}">{{ i18n "sign-in" }}</a>
+        </span>
+      {{- end -}}
     </div>
 
 </div>
