Add missing alt-tag to logo

--- a/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
+++ b/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
@@ -20,7 +20,7 @@
           <a href="{{ .Site.Params.siteRootURL }}"><span class="logo-text-secondary">{{ i18n "product-tagline" }}</span></a>
         </div>
         
-        <a href="{{ .Site.Params.siteRootURL }}"><img id="site-nav-logo" src="{{ .Site.Params.siteNavLogo }}"/></a>
+        <a href="{{ .Site.Params.siteRootURL }}"><img id="site-nav-logo" src="{{ .Site.Params.siteNavLogo }}" alt="Rhino Logo"/></a>
         <div class="clear"></div>
       </div>
       <div class="overlayMenuIcon" id="theoverlayMenuIcon">
