Sync parts of site-navigation we can sync

--- a/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
+++ b/themes/rhino3d.com-theme/layouts/partials/site-navigation.html
@@ -7,6 +7,7 @@
       <!-- See 1Password: Azure Subscription Key credential for subscription key -->
       <form id="cref" action="/searchresults/">
         <label for="search"><input id="searchtext" type="text" name="q" size="24" value="" placeholder="{{ i18n "search-navbar" }}" /></label>  
+        <input class="searchBox" type="submit" name="sa" size="2" aria-label="Search" value=" "/>
       </form>
     </div>
 
