--- a/themes/rhino3d.com-theme/assets/scss/style.scss
+++ b/themes/rhino3d.com-theme/assets/scss/style.scss
@@ -49,8 +49,7 @@
 
 @import "_custom";
 /* Site-specific custom style overrides */
-@import "../../../../static/scss/_overrides";
-
+@import "../../../../static/scss/_site-override";
 
 // media print overrides to rule them all
 @import "_print";
