Use variables in footer.  Cite WWW-1811

--- a/static/scss/_site-override.scss
+++ b/static/scss/_site-override.scss
@@ -106,6 +106,18 @@ h2 a:visited {
   top: 80px;
 }
 
+.footer a {
+	color: #337ab7;
+	text-decoration: none;
+}
+.footer a:hover {
+	color: #337ab7;
+	text-decoration: underline;
+}
+.footer a:visited {
+	color: #1756a9;
+}
+
 /*
 ##############################################################################
 ##  Index.md Page
