--- a/themes/rhino3d.com-theme/assets/scss/_partial/_footer.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_partial/_footer.scss
@@ -9,11 +9,11 @@
 }
 
 .footer a {
-	color: #803030;
+	color: $global-link-color;
 	text-decoration: none;
 }
 .footer a:hover {
-	color: red;
+	color: $global-link-hover-color;
 	text-decoration: underline;
 }
 .footer input {
