--- a/themes/rhino3d.com-theme/layouts/shortcodes/figure.html
+++ b/themes/rhino3d.com-theme/layouts/shortcodes/figure.html
@@ -6,17 +6,17 @@
 {{ if hasPrefix $thumb "/images/"}}
 {{- $style_url := ($thumb | relURL ) -}}
 {{- if eq hugo.Environment "development" -}}
-<div class="img"{{- with .Get "size" -}} data-size="{{.}}"{{- end -}}>
+<div class="img"{{- if .Parent -}} {{- if .Get "no-back" -}}{{- else -}}style="background-image: url({{ $style_url }});" {{- end -}}{{- end -}}{{- with .Get "size" -}} data-size="{{.}}"{{- end -}}>
 <img itemprop="thumbnail" src="{{ $thumb | relURL }}" {{ with .Get "alt" | default (.Get "caption") }}alt="{{.}}"{{ end }}/><!-- <img> hidden if in .gallery -->
 </div>
 {{- else -}}
 {{- $abs_url := print .Site.Params.rhinoURLNewSource $thumb -}}
-<div class="img"{{- with .Get "size" -}} data-size="{{.}}"{{- end -}}>
+<div class="img"{{- if .Parent -}} {{- if .Get "no-back" -}}{{- else -}}style="background-image: url({{ $abs_url }});" {{- end -}}{{- end -}}{{- with .Get "size" -}} data-size="{{.}}"{{- end -}}>
 <img itemprop="thumbnail" src="{{ $thumb | relURL }}" {{- with .Get "alt" | default (.Get "caption") -}}alt="{{.}}"{{- end -}}/><!-- <img> hidden if in .gallery -->
 </div>
 {{- end -}}
 {{- else -}}
-<div class="img"{{- with .Get "size" -}} data-size="{{.}}"{{- end -}}>
+<div class="img"{{- if .Parent -}} {{- if .Get "no-back" -}}{{- else -}}style="background-image: url({{ $thumb }});" {{- end -}}{{- end -}}{{- with .Get "size" -}} data-size="{{.}}"{{- end -}}>
 <img itemprop="thumbnail" src="{{ $thumb }}" {{- with .Get "alt" | default (.Get "caption") -}}alt="{{.}}"{{- end -}}/><!-- <img> hidden if in .gallery -->
 </div>
 {{- end -}}
