Sync rhino3d.com-theme

--- a/themes/rhino3d.com-theme/assets/scss/_custom.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_custom.scss
@@ -478,6 +478,16 @@ li .new-callout-bullet {
 	right: 10%;
 }
 
+/*
+##################################################################
+# Hotlinks for jumping off to more detail
+##################################################################
+*/
+.hotlink{
+	text-align: right;
+	justify-content: right;
+}
+
 
 /*
 ##################################################################
