--- a/themes/rhino3d.com-theme/assets/scss/_print.scss
+++ b/themes/rhino3d.com-theme/assets/scss/_print.scss
@@ -1,11 +1,36 @@
+/* 
+##################################################################
+# Styling needed all the time to hide print ounly styling
+##################################################################
+*/
+
+
+.twentytwenty-container-print {
+  display: none;
+}
+
+
+@page {
+  size: portrait;
+}
+
+
 @media only print {
+
+/* 
+##################################################################
+# Print only Styling general adaptation
+##################################################################
+*/
+
   #navbar {
-    display: block;
+    display: none;
     position: unset;
   }
 
   #logo-container {
     height: 125px;
+    display: none;
   }
 
   #cref,
@@ -19,6 +44,78 @@
     display: none;
   }
   .outerbox {
-    margin-top: 50px;
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
+
+  body {
+    font-size: 80%;
+    line-height: 1.3;
+  }
+
+  p {
+    margin-top: 2px;
+  }
+
+  li > p {
+    margin-bottom: 0px;
+    margin-top: 0px;
+  }
+
+  h2 {
+    border-bottom: none;
+  }
+
+  .hotlink {
+    display: none;
+  }
+  /* 
+##################################################################
+# Page Break behavior for style blocks. 
+# keeping images with notes or splitting before headlines etc....
+##################################################################
+*/
+
+  .headline-break {
+    page-break-before: always;
+  }
+  h2, h3, h4 {
+    page-break-after: avoid;
+  }
+  pre, blockquote {
+    page-break-inside: avoid;
+  }
+  div.details {
+    page-break-inside: avoid;
+    page-break-before: avoid;
+  }
+  #textbox > p {
+    page-break-before: avoid;
+  }
+
+  /* 
+##################################################################
+# Print only Styling for slider images.  
+# Splits the two images into left and right
+##################################################################
+*/
+
+  .twentytwenty-container {
+    display: none;
+  }
+  .column-print {
+	  flex: 30%;
+	  padding: 5px;
+	}
+  .column-print > img {
+    max-width: 100%;
+  }
+	.container-print {
+	   display: flex;
+	}
+
 }
